--- a/car-details.html
+++ b/car-details.html
@@ -4,10 +4,10 @@
 		<title>DiiL auto sales | Car details</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/png" href="images/favicon-96x96.png">
+		<link rel="stylesheet" href="bootstrap.min.css" />
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="favicon-96x96.png">
 	</head>
 	<body class="is-preload">
 
@@ -59,18 +59,18 @@
 
 									<div class="row">
 										<div class="col-md-6">
-											<img src="images/product-1-720x480.jpg" class="img-responsive" alt="">
+											<img src="product-1-720x480.jpg" class="img-responsive" alt="">
 										</div>
 
 										<div class="col-md-6">
 											<div class="row">
-												<div class="col-md-4 col-xs-6"><img src="images/product-1-720x480.jpg" class="img-responsive" alt=""></div>
-												<div class="col-md-4 col-xs-6"><img src="images/product-2-720x480.jpg" class="img-responsive" alt=""></div>
-												<div class="col-md-4 col-xs-6"><img src="images/product-3-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-1-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-2-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-3-720x480.jpg" class="img-responsive" alt=""></div>
 
-												<div class="col-md-4 col-xs-6"><img src="images/product-4-720x480.jpg" class="img-responsive" alt=""></div>
-												<div class="col-md-4 col-xs-6"><img src="images/product-5-720x480.jpg" class="img-responsive" alt=""></div>
-												<div class="col-md-4 col-xs-6"><img src="images/product-6-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-4-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-5-720x480.jpg" class="img-responsive" alt=""></div>
+												<div class="col-md-4 col-xs-6"><img src="product-6-720x480.jpg" class="img-responsive" alt=""></div>
 											</div>
 
 											<br>
@@ -241,14 +241,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="bootstrap.bundle.min.js"></script>
+			<script src="jquery.scrolly.min.js"></script>
+			<script src="jquery.scrollex.min.js"></script>
+			<script src="browser.min.js"></script>
+			<script src="breakpoints.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
