--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,10 @@
 		<title>DiiL auto sales | Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/png" href="images/favicon-96x96.png">
+		<link rel="stylesheet" href="bootstrap.min.css" />
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="favicon-96x96.png">
 	</head>
 	<body class="is-preload">
 
@@ -63,7 +63,7 @@
 							<section class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/blog-1-720x480.jpg" alt="" />
+										<img src="blog-1-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -77,7 +77,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/blog-2-720x480.jpg" alt="" />
+										<img src="blog-2-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -91,7 +91,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/blog-3-720x480.jpg" alt="" />
+										<img src="blog-3-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -105,7 +105,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/blog-4-720x480.jpg" alt="" />
+										<img src="blog-4-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -119,7 +119,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/blog-5-720x480.jpg" alt="" />
+										<img src="blog-5-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -133,7 +133,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/blog-6-720x480.jpg" alt="" />
+										<img src="blog-6-720x480.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit hic</h3>
@@ -167,14 +167,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="bootstrap.bundle.min.js"></script>
+			<script src="jquery.scrolly.min.js"></script>
+			<script src="jquery.scrollex.min.js"></script>
+			<script src="browser.min.js"></script>
+			<script src="breakpoints.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
