--- a/team.html
+++ b/team.html
@@ -4,10 +4,10 @@
 		<title>DiiL auto sales | Team</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/png" href="images/favicon-96x96.png">
+		<link rel="stylesheet" href="bootstrap.min.css" />
+		<link rel="stylesheet" href="main.css" />
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="favicon-96x96.png">
 	</head>
 	<body class="is-preload">
 
@@ -59,7 +59,7 @@
 									
 									<div class="row">
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Shaaibu Danbaba</h3>
 
@@ -72,7 +72,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Muhammad Sulaiman</h3>
 
@@ -85,7 +85,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Usman Alhassan</h3>
 
@@ -98,7 +98,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Nasir</h3>
 
@@ -111,7 +111,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Adamu Abdullahi</h3>
 
@@ -124,7 +124,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Ibrahim Yusha'u</h3>
 
@@ -137,7 +137,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Aliyu Muhammad</h3>
 
@@ -150,7 +150,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Ahmad Shaaibu</h3>
 
@@ -163,7 +163,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Usman Yusuf</h3>
 
@@ -176,7 +176,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Alex</h3>
 
@@ -189,7 +189,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Abdulmajid</h3>
 
@@ -202,7 +202,7 @@
 										</div>
 
 										<div class="col-md-3 col-sm-6 co-xs-12 text-center">
-											<img src="images/icon.jpg" class="img-responsive" alt="">	
+											<img src="icon.jpg" class="img-responsive" alt="">	
 
 											<h3>Muhammad</h3>
 
@@ -240,14 +240,14 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="bootstrap.bundle.min.js"></script>
+			<script src="jquery.scrolly.min.js"></script>
+			<script src="jquery.scrollex.min.js"></script>
+			<script src="browser.min.js"></script>
+			<script src="breakpoints.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
